Adding better word-wrapping on the factsheet sidebar for long links.

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -92,6 +92,10 @@ dt, #factsheet caption {
 	background-color: #eee;
 }
 
+#factsheet dd {
+	word-wrap: break-word;
+}
+
 #images li a {
 	background-size: cover;
 	display: block;
