--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -51,8 +51,8 @@
 /* #Basic Styles
 ================================================== */
 	body {
-		background: #fcfcfc;
-		font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		background: #ffffff;
+		font: 14px/21px "Georgia", "Times New Roman", serif;
 		color: #444;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
@@ -155,7 +155,7 @@
 	  margin-bottom: 20px;
 	  line-height: normal;
 	  padding: 8px 10px;
-	  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+	  font-family: "Georgia", "Times New Roman", serif; }
 
 	.button:hover,
 	button:hover,
