Making it clear the download icon near images is a "download all" icon with text.

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -37,6 +37,10 @@
 	width: 100%;
 }
 
+#images .icon-download {
+	margin-left: 10px;
+}
+
 .video p {
 	white-space: nowrap;
 	text-overflow: ellipsis;
